<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.nestedfragments.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_add"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.android.nestedfragments.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_add"
            app:destination="@id/navigation_add"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_dashboard"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.android.nestedfragments.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_add"
            app:destination="@id/navigation_add"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_notifications"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.android.nestedfragments.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.android.nestedfragments.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_add"
            app:destination="@id/navigation_add"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_favorite"/>
    </fragment>
</navigation>